# programming-and-maths-Problems

./: README.md  c_test.c  test.txt
Python Basics/: python_practice_zero_to_hero.ipynb  readme.md
Python_basics_and_intermidiate/: 0_basic_data_str.py  a_operators_and_conditions.py  b_iterable_and_loops2.py  environments.txt  readme.md
Tensors/: 00_tensor_fundamentals_pytorch.ipynb  00_tensor_fundamentals_tensorflow.ipynb  readme.md
Tensors/deep_learning_practice/deep_learning_in_cpp_cuda/01_linear_regression/: CMakeLists.txt  jobfile.sh  linear_regression.cpp  linear_regression_final.cpp  readme.md
assembly_from_scratch/: 04_jump1.asm  06_stack.asm  08_function1.asm  function  hello  intro  jump  jump1  stack
bash_scripting_from_scratch/: control_flow_case.sh  control_flow_for.sh  control_flow_while.sh  curve_utils.py  debug_bash_script_1.sh  debug_bash_script_2.sh  file.txt  input_output.sh  output.txt  run_all.sh  run_deepsolo_demo.sh  run_python_code.sh
c_from_scratch/: 2_practice_pointer_struct.c  4_practice_struct_calloc_function.c  integral.c  multi-threaded-mat-mul.c
c_programming_examples/: 1_practice.c  3_practice_struct_malloc.c  factorial.c  matrix_mul.c  readme.md
convex_optimization_from_scratch/: 0_big_picture.py  1_big_picturein_2d.py  2_big_picture_in_3d.py  grad.py  requirements.txt
cpp/: readme.md
cpp_from_scratch/: readme.md
cpp_from_scratch/software_development_basics/cmake_basics/cmake2/: CMakeLists.txt  add.h
cuda_from_scratch/: readme.md
fourier_transform/: readme.md
geometry_from_scratch/: shapely_geometric_objects.ipynb
(+304 files in other folders)
